<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/spacing_30dp"
        android:layout_height="@dimen/spacing_30dp"
        android:layout_margin="@dimen/spacing_16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextTitle.Bold.GrayDarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_18dp"
        android:text="@string/restaurants"
        app:layout_constraintStart_toStartOf="@id/ivBack"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/spacing_24dp"
            android:layout_height="@dimen/spacing_24dp"
            android:layout_marginEnd="@dimen/spacing_6dp"
            android:src="@drawable/ic_filter_outline" />

        <TextView
            android:id="@+id/tvFilter"
            style="@style/TextTitle.Bold.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:itemCount="1"
        tools:listitem="@layout/item_restaurant_category" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRestaurants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCategories"
        tools:listitem="@layout/item_restaurant" />

    <ProgressBar
        android:id="@+id/pbRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvRestaurants"
        app:layout_constraintEnd_toEndOf="@id/rvRestaurants"
        app:layout_constraintStart_toStartOf="@id/rvRestaurants"
        app:layout_constraintTop_toTopOf="@id/rvRestaurants" />

    <TextView
        android:id="@+id/tvError"
        style="@style/TextLarge.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvRestaurants"
        app:layout_constraintEnd_toEndOf="@id/rvRestaurants"
        app:layout_constraintStart_toStartOf="@id/rvRestaurants"
        app:layout_constraintTop_toTopOf="@id/rvRestaurants"
        tools:text="@string/empty_data" />


</androidx.constraintlayout.widget.ConstraintLayout>