<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@id/clComment"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.detail.DetailActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/spacing_30dp"
                android:layout_height="@dimen/spacing_30dp"
                android:layout_margin="@dimen/spacing_16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextTitle.Bold.GrayDarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_18dp"
                app:layout_constraintStart_toStartOf="@id/ivBack"
                app:layout_constraintTop_toBottomOf="@id/ivBack"
                tools:text="Tom's Kitchen" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPreviewRestaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:itemCount="1"
                tools:listitem="@layout/item_restaurant_preview" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16dp"
                android:layout_marginTop="@dimen/spacing_24dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvPreviewRestaurant">

                <TextView
                    android:id="@+id/tvRating"
                    style="@style/TextBody1.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_14dp"
                    android:text="@string/rating" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_16dp"
                    android:layout_height="@dimen/spacing_16dp"
                    android:src="@drawable/ic_star" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_16dp"
                    android:layout_height="@dimen/spacing_16dp"
                    android:src="@drawable/ic_star" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_16dp"
                    android:layout_height="@dimen/spacing_16dp"
                    android:src="@drawable/ic_star" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_16dp"
                    android:layout_height="@dimen/spacing_16dp"
                    android:src="@drawable/ic_star" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_16dp"
                    android:layout_height="@dimen/spacing_16dp"
                    android:layout_marginEnd="@dimen/spacing_4dp"
                    android:src="@drawable/ic_star_outline" />

                <TextView
                    style="@style/TextBody1.Bold.Yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="4.0/5" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tvAddress"
                style="@style/TextBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_24dp"
                android:layout_marginEnd="@dimen/spacing_28dp"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintEnd_toStartOf="@id/ivCopy"
                app:layout_constraintStart_toStartOf="@id/llRating"
                app:layout_constraintTop_toBottomOf="@id/llRating"
                tools:text="Lot 3, Persiaran Klang Sentral 2, Klang Sentral, 41050 Klang, Selangor" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCopy"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginEnd="@dimen/spacing_16dp"
                android:background="@drawable/ri_rounded_4_primary"
                android:padding="@dimen/spacing_8dp"
                android:src="@drawable/ic_copy_outline"
                app:layout_constraintBottom_toBottomOf="@id/tvAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvAddress" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llNavigate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:background="@drawable/ri_rounded_4_primary"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/spacing_16dp"
                app:layout_constraintEnd_toEndOf="@id/ivCopy"
                app:layout_constraintStart_toStartOf="@id/tvAddress"
                app:layout_constraintTop_toBottomOf="@id/tvAddress">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_24dp"
                    android:layout_height="@dimen/spacing_24dp"
                    android:layout_marginEnd="@dimen/spacing_12dp"
                    android:src="@drawable/ic_marker" />

                <TextView
                    style="@style/TextLarge.Bold.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navigate_with_google_map" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tvDescriptionLabel"
                style="@style/TextBody1.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_36dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="@id/llNavigate"
                app:layout_constraintTop_toBottomOf="@id/llNavigate" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/TextBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8dp"
                app:layout_constraintEnd_toEndOf="@id/llNavigate"
                app:layout_constraintStart_toStartOf="@id/tvDescriptionLabel"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionLabel"
                tools:text="@string/lorem_ipsum" />

            <TextView
                android:id="@+id/tvCommentLabel"
                style="@style/TextBody1.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_36dp"
                android:text="@string/comment"
                app:layout_constraintStart_toStartOf="@id/tvDescription"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCommentLabel"
                tools:itemCount="3"
                tools:listitem="@layout/item_comment" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:elevation="@dimen/spacing_16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_16dp"
        android:paddingVertical="@dimen/spacing_12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/etComment"
            style="@style/TextBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_12dp"
            android:background="@drawable/sh_filled_white_rounded_6_border"
            android:hint="@string/write_a_comment"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/spacing_12dp"
            android:paddingVertical="@dimen/spacing_8dp"
            app:layout_constraintBottom_toBottomOf="@id/ivSend"
            app:layout_constraintEnd_toStartOf="@id/ivSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivSend" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSend"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/ri_rounded_4_primary"
            android:padding="@dimen/spacing_8dp"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>